# verzerrt

./: .gitignore  .release-please-manifest.json  README.md  package-lock.json  package.json  release-please-config.json
.github/workflows/: deploy.yaml  test-and-build.yaml
.husky/: commit-msg
_infrastructure/: .gitignore  .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf
_infrastructure/cdn/: acm.tf  cloudfront.tf  outputs.tf  route53.tf  variables.tf
_infrastructure/docs/: tracemap-architecture.drawio
_infrastructure/koa-server/: api-gateway.tf  dynamodb.tf  kms.tf  lambda.tf  outputs.tf  variables.tf
_infrastructure/restricted-admin/: oidc.tf  restricted_admin.tf  variables.tf
_infrastructure/static-website/: s3.tf  variables.tf
_infrastructure/terraform-backend/: dynamo.tf  s3.tf
lambdas/monitor/: main.py  pyproject.toml
verzerrt-website/: CHANGELOG.md  index.html  package.json  tsconfig.json  vite.config.js
verzerrt-website/public/: manifest.json  test-data.json
verzerrt-website/public/stopwords/: custom.txt
verzerrt-website/src/: App.tsx  attributions.tsx  errors.ts  index.tsx
verzerrt-website/src/components/: chart.tsx  description.tsx  publishers.ts
verzerrt-website/src/homepage/: home.tsx
verzerrt-website/src/models/: StoryData.ts
verzerrt-website/src/styles/: buttons.ts  colors.ts  ibm-plex-sans-fontface.ts  shadows.ts  theme.ts  utils.ts
verzerrt-website/src/utils/: data-transform.ts  use-local-storage.tsx
verzerrt-website/typings/: window.d.ts
