[tool.poetry]
name = "monitor"
version = "0.1.0"
description = ""
authors = ["Bagrat Akopyan <bagrat.akopyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
